objects/Vendor_Product_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to product. Can&apos;t have a master detail to product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vendor Product Relationships</relationshipLabel>
        <relationshipName>Vendor_Product_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <formula>Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Product_Name__c</fullName>
        <label>Vendor-Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to vendor.</description>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Vendor Product Relationships</relationshipLabel>
        <relationshipName>Vendor_Product_Relationships_del</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>